--- a/src/man/ja_JP/pkgdepend.1
+++ b/src/man/ja_JP/pkgdepend.1
@@ -43,7 +43,7 @@ pkgdepend \- Image Packaging System 依存関係アナライザ
 .ad
 .RS 22n
 .rt  
-提供されたファイル内の ELF ヘッダーが依存関係情報のために分析され、\fB-k\fR および \fB-D\fR オプションが指定されていると取得された情報が変更されます。ELF 依存関係についての詳細は、\fBldd\fR および\fI『Oracle Solaris 11.2 Linkers and Libraries Guide 』\fRを参照してください。 
+提供されたファイル内の ELF ヘッダーが依存関係情報のために分析され、\fB-k\fR および \fB-D\fR オプションが指定されていると取得された情報が変更されます。ELF 依存関係についての詳細は、\fBldd\fR および\fI『OmniOS Linkers and Libraries Guide 』\fRを参照してください。 
 .RE
 
 .sp
@@ -518,4 +518,4 @@ _
 \fBpkg\fR(5)
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
