--- a/src/man/ja_JP/pkgrecv.1
+++ b/src/man/ja_JP/pkgrecv.1
@@ -599,10 +599,10 @@ _
 \fBpkgrepo\fR(1), \fBpkgsend\fR(1), \fBpkg\fR(5)
 .sp
 .LP
-\fI『Copying and Creating Package Repositories in Oracle Solaris 11.2 』\fR
+\fI『Copying and Creating Package Repositories in OmniOS 』\fR
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
 .SH 注意事項
 .sp
 .LP
