--- a/src/man/ja_JP/pkgsend.1
+++ b/src/man/ja_JP/pkgsend.1
@@ -388,10 +388,10 @@ _
 \fBpkgdepend\fR(1), \fBpkgrepo\fR(1), \fBpkg.depotd\fR(1M), \fBpkg\fR(5)
 .sp
 .LP
-\fI『Packaging and Delivering Software With the Image Packaging System in Oracle Solaris 11.2 』\fR
+\fI『Packaging and Delivering Software With the Image Packaging System in OmniOS 』\fR
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
 .SH 注意事項
 .sp
 .LP
