--- a/src/man/zh_CN/pkg.1
+++ b/src/man/zh_CN/pkg.1
@@ -2342,7 +2342,7 @@ pkg:/package/svr4@0.5.11-0.175.0.0.0.2.1 solaris
 .RS 4n
 使用指定的代理 URI 检索指定源 (\fB-g\fR) 或镜像 (\fB-m\fR) 的内容。代理值被存储为发布者配置的一部分，这意味着子映像所使用的系统信息库是自动更新的。此选项不能用于设置验证代理。\fIproxy_to_use\fR 值不能使用 \fBprotocol://user:password@host\fR 格式。
 .sp
-在运行时，\fBhttp_proxy\fR 或相关环境变量会覆盖此代理设置。有关接受的环境变量名列表，请参见 \fBcurl\fR(1) 手册页的“环境”部分。如果使用环境变量来设置代理 URI，则必须也将 \fBsvc:/application/pkg/system-repository\fR SMF 服务的相应代理属性设置为同一值。请参见《\fIAdding and Updating Software in Oracle Solaris 11.2\fR》中的 "Specifying a Proxy"。
+在运行时，\fBhttp_proxy\fR 或相关环境变量会覆盖此代理设置。有关接受的环境变量名列表，请参见 \fBcurl\fR(1) 手册页的“环境”部分。如果使用环境变量来设置代理 URI，则必须也将 \fBsvc:/application/pkg/system-repository\fR SMF 服务的相应代理属性设置为同一值。请参见《\fIAdding and Updating Software in OmniOS\fR》中的 "Specifying a Proxy"。
 .RE
 
 .sp
@@ -4012,7 +4012,7 @@ _
 \fBpkgsend\fR(1)、\fBbeadm\fR(1M)、\fBpkg.depotd\fR(1M)、\fBpkg.sysrepo\fR(1M)、\fBglob\fR(3C)、\fBpkg\fR(5)
 .sp
 .LP
-\fI《Adding and Updating Software in Oracle Solaris 11.2》\fR
+\fI《Adding and Updating Software in OmniOS》\fR
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
