--- a/src/man/zh_CN/pkg.5
+++ b/src/man/zh_CN/pkg.5
@@ -749,7 +749,7 @@ file path=usr/lib/python2.6/vendor-packages/pkg/__init__.py \e
 .ad
 .sp .6
 .RS 4n
-在安装此软件包之前，相关项目标（如果存在）在要修改的映像上必须具有指定值或更大值。如果 \fBroot-image\fR 属性的值为 \fBtrue\fR，则目标必须存在于根目录为 / 的映像上，才能安装此软件包。如果 \fBroot-image\fR 属性的值为 \fBtrue\fR，并且 \fBfmri\fR 属性的值以 \fBpkg:/feature/firmware/\fR 开头，则将剩余的 \fBfmri\fR 值视为 \fB/usr/lib/fwenum\fR 中计算固件依赖项的命令。有关示例，请参见《\fIPackaging and Delivering Software With the Image Packaging System in Oracle Solaris 11.2\fR》。
+在安装此软件包之前，相关项目标（如果存在）在要修改的映像上必须具有指定值或更大值。如果 \fBroot-image\fR 属性的值为 \fBtrue\fR，则目标必须存在于根目录为 / 的映像上，才能安装此软件包。如果 \fBroot-image\fR 属性的值为 \fBtrue\fR，并且 \fBfmri\fR 属性的值以 \fBpkg:/feature/firmware/\fR 开头，则将剩余的 \fBfmri\fR 值视为 \fB/usr/lib/fwenum\fR 中计算固件依赖项的命令。有关示例，请参见《\fIPackaging and Delivering Software With the Image Packaging System in OmniOS\fR》。
 .RE
 
 .sp
@@ -1502,7 +1502,7 @@ file group=sys mode=0644 overlay=allow owner=root \e
 .RE
 .sp
 .LP
-可以创建定制侧面标记和 \fBvariant.debug.*\fR 变体标记。有关更多信息，请参见《\fIPackaging and Delivering Software With the Image Packaging System in Oracle Solaris 11.2\fR》。以下是 Oracle Solaris 中的常用标记。
+可以创建定制侧面标记和 \fBvariant.debug.*\fR 变体标记。有关更多信息，请参见《\fIPackaging and Delivering Software With the Image Packaging System in OmniOS\fR》。以下是 Oracle Solaris 中的常用标记。
 .sp
 
 .sp
@@ -1616,13 +1616,13 @@ _
 \fBpkg\fR(1)、\fBpkgsend\fR(1)、\fBpkg.depotd\fR(1M)、\fBpkg.sysrepo\fR(1M)、\fBsvcs\fR(1)、\fBsvcadm\fR(1M)
 .sp
 .LP
-\fI《Adding and Updating Software in Oracle Solaris 11.2》\fR
+\fI《Adding and Updating Software in OmniOS》\fR
 .sp
 .LP
-\fI《Copying and Creating Package Repositories in Oracle Solaris 11.2》\fR
+\fI《Copying and Creating Package Repositories in OmniOS》\fR
 .sp
 .LP
-\fI《Packaging and Delivering Software With the Image Packaging System in Oracle Solaris 11.2》\fR
+\fI《Packaging and Delivering Software With the Image Packaging System in OmniOS》\fR
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
