--- a/src/man/zh_CN/pkgdepend.1
+++ b/src/man/zh_CN/pkgdepend.1
@@ -43,7 +43,7 @@ pkgdepend \- 映像包管理系统依赖项分析器
 .ad
 .RS 13n
 .rt  
-分析提供的文件中的 ELF 头以获取依赖项信息，\fB-k\fR 和 \fB-D\fR 选项可用于修改获取的信息。有关 ELF 依赖项的更多详细信息，请参见 \fBldd\fR 和\fI《Oracle Solaris 11.2 Linkers and Libraries Guide》\fR。 
+分析提供的文件中的 ELF 头以获取依赖项信息，\fB-k\fR 和 \fB-D\fR 选项可用于修改获取的信息。有关 ELF 依赖项的更多详细信息，请参见 \fBldd\fR 和\fI《OmniOS Linkers and Libraries Guide》\fR。 
 .RE
 
 .sp
@@ -518,4 +518,4 @@ _
 \fBpkg\fR(5)
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
