--- a/src/man/zh_CN/pkgmerge.1
+++ b/src/man/zh_CN/pkgmerge.1
@@ -462,7 +462,7 @@ _
 \fBpkgrepo\fR(1)、\fBpkg\fR(5)
 .sp
 .LP
-\fI《Packaging and Delivering Software With the Image Packaging System in Oracle Solaris 11.2》\fR
+\fI《Packaging and Delivering Software With the Image Packaging System in OmniOS》\fR
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
