--- a/src/man/ja_JP/pkgrepo.1
+++ b/src/man/ja_JP/pkgrepo.1
@@ -1180,10 +1180,10 @@ _
 \fBpkg\fR(1), \fBpkgrecv\fR(1), \fBpkgsend\fR(1), \fBpkg.depotd\fR(1M), \fBpkg\fR(5)
 .sp
 .LP
-\fI『Copying and Creating Package Repositories in Oracle Solaris 11.2 』\fR
+\fI『Copying and Creating Package Repositories in OmniOS 』\fR
 .sp
 .LP
-\fBhttps://java.net/projects/ips/pages/Home\fR
+\fBhttps://github.com/omniosorg/pkg5\fR
 .SH 注意事項
 .sp
 .LP
